api_versioned_docs/version-12.0.5/avalonia/platform/applewkwebviewenvironmentrequestedeventargs.mdx
---
title: 'AppleWKWebViewEnvironmentRequestedEventArgs'
hide_title: true
slug: '/avalonia/platform/applewkwebviewenvironmentrequestedeventargs'
uid: 'Avalonia.Platform.AppleWKWebViewEnvironmentRequestedEventArgs'
commentId: 'T:Avalonia.Platform.AppleWKWebViewEnvironmentRequestedEventArgs'
docset: 'avalonia-docs'
packageId: 'Avalonia.Controls.WebView'
assembly: 'Avalonia.Controls.WebView'
apiKind: 'Class'
generatedBy: 'dotnet-apiref'
namespace: 'Avalonia.Platform'
tfms:
  - 'net10.0-browser1.0'
---

import ApiRefPage from '@site/src/components/apiref/ApiRefPage';

<ApiRefPage>

<h1 className="apiref-page__title">AppleWKWebViewEnvironmentRequestedEventArgs Class</h1>

## Definition

<div className="apiref-page__definition-meta">
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Namespace:</span> <a href="./">Avalonia.Platform</a>
</div>
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Assembly:</span> <code>Avalonia.Controls.WebView</code>
</div>
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Package:</span> <code>Avalonia.Controls.WebView</code>
</div>
</div>

<div className="apiref-page__signature">

```csharp
public class AppleWKWebViewEnvironmentRequestedEventArgs
```

</div>

<div className="apiref-page__relations">
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Inheritance:</span> EventArgs <span className="apiref-page__relation-separator">-&gt;</span> <a href="../controls/webviewenvironmentrequestedeventargs">WebViewEnvironmentRequestedEventArgs</a> <span className="apiref-page__relation-separator">-&gt;</span> AppleWKWebViewEnvironmentRequestedEventArgs
</div>
</div>

## Methods

| Name | Description |
| --- | --- |
| [GetDeferral](../controls/webviewenvironmentrequestedeventargs.mdx#uid-a2d519df95) | Inherited from [WebViewEnvironmentRequestedEventArgs](../controls/webviewenvironmentrequestedeventargs.mdx). |

## Properties

| Name | Description |
| --- | --- |
| [ApplicationNameForUserAgent](#uid-aefcaf799d) | No summary available. |
| [DataStoreIdentifier](#uid-6b4fc518fd) | No summary available. |
| [LimitsNavigationsToAppBoundDomains](#uid-6e4aa162ca) | No summary available. |
| [NonPersistentDataStore](#uid-291acbc2af) | No summary available. |
| [ScriptHandlerMessageName](#uid-b3e04d38bd) | No summary available. |
| [UpgradeKnownHostsToHTTPS](#uid-f9c03c5c58) | No summary available. |
| [EnableDevTools](../controls/webviewenvironmentrequestedeventargs.mdx#uid-aeed4f7a28) | Inherited from [WebViewEnvironmentRequestedEventArgs](../controls/webviewenvironmentrequestedeventargs.mdx). |

<section className="apiref-page__member-entry">

<span id="uid-aefcaf799d"></span>

### ApplicationNameForUserAgent Property

```csharp
public string ApplicationNameForUserAgent { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-6b4fc518fd"></span>

### DataStoreIdentifier Property

```csharp
public Guid DataStoreIdentifier { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-6e4aa162ca"></span>

### LimitsNavigationsToAppBoundDomains Property

```csharp
public bool LimitsNavigationsToAppBoundDomains { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-291acbc2af"></span>

### NonPersistentDataStore Property

```csharp
public bool NonPersistentDataStore { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-b3e04d38bd"></span>

### ScriptHandlerMessageName Property

```csharp
public string ScriptHandlerMessageName { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-f9c03c5c58"></span>

### UpgradeKnownHostsToHTTPS Property

```csharp
public bool UpgradeKnownHostsToHTTPS { get; set; }
```

</section>

</ApiRefPage>

